Fix: added aqua and silver word color.

--- a/Ejercicio 2/style.css
+++ b/Ejercicio 2/style.css
@@ -137,5 +137,9 @@ body {
 .color--green{
     color: green;
 }
-.color--aqua{}
-.color--silver{}
+.color--aqua{
+    color: aqua;
+}
+.color--silver{
+    color: silver;
+}   
